# xserver

./: configure.ac
dix/: main.c
hw/xfree86/xwayland/: Makefile.am  xwayland-drm.c  xwayland-events.c  xwayland-input.c  xwayland-private.h  xwayland-window.c  xwayland.c  xwayland.h
include/: scrnintstr.h
present/: Makefile.am  present.c  present_priv.h  present_wayland.c
